[package]
name = "janus-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The LLM interface: MCP server, semantic serialization, diff streaming, and typed extraction."

[lints]
workspace = true

[[bin]]
name = "janus-mcp"
path = "src/main.rs"

[dependencies]
janus-host.workspace = true
janus-paint.workspace = true
serde_json.workspace = true
base64.workspace = true
