[package]
name = "janus-atom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "String interning for Janus — fast integer-equality atoms for hot browser data."

[lints]
workspace = true

[dependencies]
rustc-hash.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "intern"
harness = false
