[package]
name = "janus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless janus-shot: URL/HTML in, PNG + semantic snapshot out — the workhorse for CI and agents."

[lints]
workspace = true

[[bin]]
name = "janus-shot"
path = "src/main.rs"

[dependencies]
janus-host.workspace = true
janus-paint.workspace = true
