[package]
name = "janus-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The human browser shell: a winit window, engine-drawn chrome, and the AccessKit accessibility graft."

[lints]
workspace = true

[[bin]]
name = "janus"
path = "src/main.rs"

[dependencies]
janus-host.workspace = true
janus-paint.workspace = true
janus-layout.workspace = true
tiny-skia.workspace = true
eframe.workspace = true
