[package]
name = "janus-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Inline and line-box layout: line breaking, BiDi reordering, and shaping integration."

[lints]
workspace = true

[dependencies]
cosmic-text.workspace = true
tiny-skia.workspace = true
